--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,8 @@
 /*criando o fundo do jogo*/
+html{
+	cursor: url('imagens/mata_mosca.png') 30 30, auto;
+}
+
 body{
 	background: url('imagens/bg.jpg') no-repeat center center fixed; 
   	-webkit-background-size: cover;
